Finished account login/register system

--- a/dummy-frontend/index.html
+++ b/dummy-frontend/index.html
@@ -7,12 +7,12 @@
 </head>
 
 <body>
-    <!-- <h1>Login</h1>
-    <form id="loginForm">
+    <h1>Login</h1>
+    <form method="POST" id="loginForm">
         <input type="text" name="username" placeholder="Username" required />
         <input type="password" name="password" placeholder="Password" required />
         <button type="submit">Login</button>
-    </form> -->
+    </form>
     <h1>Register</h1>
     <form method="POST" id="registrationForm">
         <input type="text" name="username" placeholder="Username" required />
@@ -20,35 +20,6 @@
         <input type="password" name="password" placeholder="Password" required />
         <button type="submit">Register</button>
     </form>
-    <script>
-        // const registerForm = document.getElementById('registerForm');
-        // registerForm.addEventListener('submit', async (e) => {
-        //     e.preventDefault();
-        //     const formData = new FormData(registerForm);
-        //     const data = Object.fromEntries(formData);
-        //     const res = await fetch('http://localhost:4000/api/auth/register', {
-        //         method: 'POST',
-        //         headers: { 'Content-Type': 'application/json' },
-        //         body: JSON.stringify(data),
-        //     });
-        //     const result = await res.json();
-        //     alert(result.msg);
-        // });
-
-        // const loginForm = document.getElementById('loginForm');
-        // loginForm.addEventListener('submit', async (e) => {
-        // e.preventDefault();
-        // const formData = new FormData(loginForm);
-        // const data = Object.fromEntries(formData);
-        // const res = await fetch('http://localhost:4000/api/auth/login', {
-        //     method: 'POST',
-        //     headers: { 'Content-Type': 'application/json' },
-        //     body: JSON.stringify(data),
-        // });
-        // const result = await res.json();
-        // alert(result.msg);
-        // });
-    </script>
     <script src="./js/sweetalert2@11.js"></script>
     <script src="./js/form.js"></script>
 </body>
